--- a/debian/control
+++ b/debian/control
@@ -7,6 +7,6 @@ Standards-Version: 3.6.1
 
 Package: ebsmount
 Architecture: all
-Depends: python (>= 2.4)
+Depends: python (>= 2.4), udev, turnkey-pylib
 Section: misc
 Description: Automatically mount EC2 EBS (Elastic Block Storage) devices
