updated maintainer email

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: ebsmount
 Section: misc
 Priority: optional
-Maintainer: Alon Swartz <alon@sterilesecurity.com>
+Maintainer: Alon Swartz <alon@turnkeylinux.org>
 Build-Depends: debhelper (>> 4.2.0)
 Standards-Version: 3.6.1
 
