--- a/debian/control
+++ b/debian/control
@@ -10,3 +10,7 @@ Architecture: all
 Depends: python (>= 2.4), udev, turnkey-pylib
 Section: misc
 Description: Automatically mount EC2 EBS (Elastic Block Storage) devices
+ Automatically mounts EBS devices when they are attached, supports
+ formatted devices as well as partitions, uniquely identifiable mount
+ points, and hooking scripts execution upon mount.
+
