make path_bin in udev rules file dynamic + install rules via Makefile

--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ install:
 	dh_testdir
 	dh_installdirs
 	dh_install
-	$(MAKE) install prefix=$(prefix)
+	$(MAKE) install prefix=$(prefix) destdir=$(buildroot)
 	dh_link
 
 binary-indep: install
