Added Eucalyptus support + refactoring
- supported EBS devices in Eucaluptus (tested on Ubuntu Maverick alpha)
- removed hardcoded device path, moved to /etc/ebsmount.conf
- refactored device path test, we no longer use it in the mountpath

- Thanks to Scott Moser <scott.moser@canonical.com>

--- a/debian/control
+++ b/debian/control
@@ -9,8 +9,8 @@ Package: ebsmount
 Architecture: all
 Depends: python (>= 2.4), udev, turnkey-pylib
 Section: misc
-Description: Automatically mount EC2 EBS (Elastic Block Storage) devices
- Automatically mounts EBS devices when they are attached, supports
- formatted devices as well as partitions, uniquely identifiable mount
- points, and hooking scripts execution upon mount.
+Description: Automatically mount EC2/Eucalyptus EBS devices
+ Automatically mounts EBS (Elastic Block Storage) devices when they are
+ attached, supports formatted devices as well as partitions, uniquely
+ identifiable mount points, and hooking scripts execution upon mount.
 
