--- a/ebsmount.conf
+++ b/ebsmount.conf
@@ -5,3 +5,5 @@ MOUNTDIR=/media/ebs
 MOUNTOPTIONS=noatime
 FILESYSTEMS=ext2 ext3
 LOGFILE=/var/log/ebsmount.log
+
+DEVPATHS=/devices/xen/vbd- /devices/virtio-pci/virtio
