--- a/ebsmount.conf
+++ b/ebsmount.conf
@@ -3,7 +3,7 @@
 ENABLED=True
 MOUNTDIR=/media/ebs
 MOUNTOPTIONS=noatime
-FILESYSTEMS=ext2 ext3
+FILESYSTEMS=ext2 ext3 ext4
 LOGFILE=/var/log/ebsmount.log
 
 DEVPATHS=/devices/xen/vbd- /devices/virtio-pci/virtio
