--- a/85-ebsmount.rules.in
+++ b/85-ebsmount.rules.in
@@ -1,8 +1,8 @@
 # udev rules to trigger ebsmount-udev on ebs attach|detach
 
 # Amazon EC2
-KERNEL=="sd[f-p]", SUBSYSTEM=="block", ATTRS{devtype}=="vbd", ACTION=="add", RUN+="@PATH_BIN@/ebsmount-udev add"
-KERNEL=="sd[f-p]", SUBSYSTEM=="block", ACTION=="remove", RUN+="@PATH_BIN@/ebsmount-udev remove"
+KERNEL=="xvd[f-p]", SUBSYSTEM=="block", ATTRS{devtype}=="vbd", ACTION=="add", RUN+="@PATH_BIN@/ebsmount-udev add"
+KERNEL=="xvd[f-p]", SUBSYSTEM=="block", ACTION=="remove", RUN+="@PATH_BIN@/ebsmount-udev remove"
 
 # Eucalyptus
 KERNEL=="vd[a-z]*", SUBSYSTEM=="block", ACTION=="add", RUN+="@PATH_BIN@/ebsmount-udev add"
