--- a/ebsmount.conf
+++ b/ebsmount.conf
@@ -7,4 +7,4 @@ MOUNTOPTIONS=noatime
 FILESYSTEMS=ext2 ext3 ext4
 LOGFILE=/var/log/ebsmount.log
 
-DEVPATHS=/devices/xen/vbd- /devices/virtio-pci/virtio
+DEVPATHS=/devices/vbd- /devices/xen/vbd- /devices/virtio-pci/virtio
