moved the hooks directory to the mount parent

--- a/ebsmount.conf
+++ b/ebsmount.conf
@@ -1,7 +1,7 @@
 # ebsmount config file
 
 ENABLED=True
-RUNHOOKS=False
+RUNHOOKS=True
 MOUNTDIR=/media/ebs
 MOUNTOPTIONS=noatime
 FILESYSTEMS=ext2 ext3 ext4
