updated kernel device names for newer kernels on Amazon EC2

--- a/ebsmount.conf
+++ b/ebsmount.conf
@@ -7,4 +7,4 @@ MOUNTOPTIONS=noatime
 FILESYSTEMS=ext2 ext3 ext4
 LOGFILE=/var/log/ebsmount.log
 
-DEVPATHS=^/devices/xen/vbd- ^/devices/virtio-pci/virtio ^/devices/pci(.*)/virtio
+DEVPATHS=^/devices/vbd- ^/devices/virtio-pci/virtio ^/devices/pci(.*)/virtio
