--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>> 4.2.0)
 Standards-Version: 3.6.1
 
 Package: ebsmount
-Architecture: all
+Architecture: any
 Depends: python (>= 2.4), udev, turnkey-pylib
 Section: misc
 Description: Automatically mount EC2/Eucalyptus EBS devices
