--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -1,5 +1,5 @@
-[git-buildpackage]
+[buildpackage]
 builder = pdebuild --pbuilder cowbuilder --debbuildopts "-sa" -- --debbuildopts ""
 debian-branch = master
-upstream-branch = upstream
+upstream-branch = master
 upstream-tree = branch
