Add missing ${misc:Depends} to binary Depends field.

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Standards-Version: 4.0.0
 Package: ebsmount
 Architecture: any
 Depends:
+ ${misc:Depends},
  python (>= 2.4),
  turnkey-pylib,
  udev,
