--- a/debian/control
+++ b/debian/control
@@ -4,13 +4,16 @@ Priority: optional
 Maintainer: Alon Swartz <alon@turnkeylinux.org>
 Build-Depends:
  debhelper (>= 10),
+ python-all (>= 2.6.6-3~),
 Standards-Version: 4.0.0
+X-Python-Version: >= 2.6
 
 Package: ebsmount
 Architecture: any
 Depends:
+ dh-python,
  ${misc:Depends},
- python (>= 2.4),
+ ${python:Depends},
  turnkey-pylib,
  udev,
 Description: Automatically mount EC2/Eucalyptus EBS devices
