(Re)implment minimalist pybuild rules.

--- a/debian/rules
+++ b/debian/rules
@@ -2,54 +2,8 @@
 
 include /usr/share/dpkg/pkg-info.mk
 
-clean:
+%:
+	dh $@ --buildsystem=pybuild
 
-	rm -f -- build-indep-stamp build-arch-stamp
-	$(MAKE) -- clean
-
-	dh_clean
-
-build: build-indep build-arch
-	mkdir -p $(prefix)
-
-build-indep: build-indep-stamp
-build-indep-stamp:
-
-	dh_testdir
-
-	touch -- $@
-
-build-arch: build-arch-stamp
-build-arch-stamp:
-
-	dh_testdir
-
-	touch -- $@
-
-install: 
-	dh_testroot
-	dh_clean
-	dh_testdir
-	dh_installdirs
-	dh_install
-	$(MAKE) install prefix=$(prefix) destdir=$(buildroot)
-	dh_link
-
-binary-indep: install
-	dh_testdir
-	dh_testroot
-	dh_installdebconf
-	dh_installdocs docs/
-	dh_installman man/ebsmount-manual.1 man/ebsmount-udev.8
-	dh_installchangelogs
-	dh_lintian
-	dh_compress
-	dh_installdeb
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
-
-binary-arch: install
-
-binary: binary-indep binary-arch
-.PHONY: clean build build-indep build-arch binary-indep binary-arch binary install
+override_dh_auto_install:
+	dh_auto_install -- prefix=debian/$(DEB_SOURCE)/usr destdir=debian/$(DEB_SOURCE)
