--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,8 @@ Maintainer: Jeremy Davis <jeremy@turnkeylinux.org>
 Build-Depends:
  debhelper (>= 10),
  python3-all (>= 3.6~),
- dh-python
+ dh-python,
+ turnkey-conffile
 Standards-Version: 4.1.1
 Homepage: https://github.com/turnkeylinux/ebsmount
 
@@ -15,6 +16,7 @@ Depends:
  ${misc:Depends},
  ${python3:Depends},
  udev,
+ turnkey-conffile
 Description: Automatically mount EC2/OpenStack EBS devices
  Automatically mounts EBS (Elastic Block Storage) devices when they are
  attached, supports formatted devices as well as partitions, uniquely
