--- a/debian/ebsmount@.service
+++ b/debian/ebsmount@.service
@@ -1,10 +1,14 @@
 [Unit]
 Description=ebsmount for %i
+Documentation=man:ebsmount-udev(8)
+After=local-fs.target
+
 [Service]
 Type=oneshot
 RemainAfterExit=true
 Environment="DEVNAME=%i"
-ExecStart=@PATH_BIN@/ebsmount-udev add
-ExecStop=@PATH_BIN@/ebsmount-udev remove
+ExecStart=/usr/bin/ebsmount-udev add
+ExecStop=/usr/bin/ebsmount-udev remove
 # Very important: Expose mounted volumes to other processes.
+PrivateMounts=no
 MountFlags=shared
